[ACC-539] upgrade startup and env tools